--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
+    "crypto": "latest",
     "date-fns": "latest",
     "embla-carousel-react": "latest",
     "framer-motion": "latest",
     "input-otp": "latest",
+    "json5": "latest",
     "jspdf": "latest",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
@@ -61,7 +63,6 @@
     "react-resizable-panels": "latest",
     "recharts": "latest",
     "sonner": "latest",
-    "sweetalert2": "^11.22.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
